# Programming-project

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
client/: CMakeLists.txt  README.md  include.h  include.hpp  main.cpp
client/entities/: bullet.cpp  bullet.hpp  entity.cpp  entity.h  entity.hpp  mob.cpp  mob.hpp  object.hpp  player.cpp  player.h  player.hpp  polygon.cpp  polygon.hpp  ray.cpp  ray.hpp  shape.cpp  shape.h
client/gui/: README.md  button.cpp  button.hpp  cursor.cpp  cursor.hpp  font.cpp  font.hpp  form.cpp  form.hpp  pausemenu.cpp  sound.cpp  sound.hpp  textbox.cpp  textbox.hpp
client/screens/: .screenmainmenu.cpp.swp  cscreen.h  cscreen.hpp  screengame.cpp  screengame.h  screengame.hpp  screenmainmenu.cpp  screenmainmenu.h  screenmainmenu.hpp  screens.h  screens.hpp
client/worldmap/: worldmap.cpp  worldmap.hpp
common/: gamemath.hpp  include.hpp
common/Entities/: entity.cpp  entity.hpp  polygon.cpp  polygon.hpp  rectangle.cpp  rectangle.hpp
common/Network/: HandshakeRequest.cpp  HandshakeRequest.hpp  HandshakeResponse.cpp  HandshakeResponse.hpp  PACKETS.md  TickPacket.cpp  TickPacket.hpp  UpdatePacket.cpp  UpdatePacket.hpp
common/World/: worldmap.cpp  worldmap.hpp
server/: CMakeLists.txt  Server.cpp  Server.hpp  entity.cpp  entity.hpp  main.cpp  player.cpp  player.hpp  worldmap.cpp  worldmap.hpp
